--- a/nginx.conf
+++ b/nginx.conf
@@ -19,12 +19,18 @@ http {
 
     access_log  /var/log/nginx/access.log  main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
 
-    keepalive_timeout  65;
+    keepalive_timeout 65;
 
-    #gzip  on;
+    types_hash_max_size 2048;
+    client_max_body_size 20M;
+    server_names_hash_bucket_size 64;
+
+    gzip on;
+    gzip_disable "msie6";
 
     upstream php-fpm {
         server localhost:9000;
